<resources>
    <string name="app_name">ALeague</string>
    <string name="lzr" translatable="false">A League</string>
    <string name="create_game">Create game</string>
    <string name="create_team">Create team</string>
    <string name="quit">Quit</string>
    <string name="choose_league">League</string>
    <string name="choose_teamA">Team A</string>
    <string name="choose_teamB">Team B</string>
    <string name="date">Set date:</string>
    <string name="time">Set time:</string>
    <string name="add_team">Add team</string>
    <string name="choose_lineup">Choose lineup</string>
    <string name="start_game">Start game</string>
    <string name="team_name">Team name:</string>
    <string name="players_title">Players</string>
    <string name="save_team_btn">Save team</string>
    <string name="add_player_btn">Add</string>
    <string name="edit_player_btn">Edit</string>
    <string name="new_team">Create new team</string>
    <string name="new_game">Create new game</string>
    <string-array name="leagues">
        <item>Liga A</item>
        <item>Liga B</item>
    </string-array>
    <string name="teams">Teams</string>
    <string name="arenas">Arenas</string>
    <string-array name="options">
        <item>Team1</item>
        <item>Team2</item>
        <item>Team3</item>
        <item>Team4</item>
    </string-array>
    <string name="teamLeagueTV">League:</string>
    <string name="leagueA" translatable="false">Liga A</string>
    <string name="leagueB" translatable="false">Liga B</string>
    <string name="title_activity_lineup" translatable="false">LineupActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="date_hint" translatable="false">dd/mm/yyyy</string>
    <string name="time_hint" translatable="false">hh/mm</string>
    <string name="title_activity_choose_lineup" translatable="false">ChooseLineupActivity</string>
    <string name="tv2pmTitle" translatable="false">2PM</string>
    <string name="tv2paTitle" translatable="false">2PA</string>
    <string name="tv3pmTitle" translatable="false">3PM</string>
    <string name="tv3paTitle" translatable="false">3PA</string>
    <string name="tv1pmTitle" translatable="false">FTM</string>
    <string name="tv1paTitle" translatable="false">FTA</string>
    <string name="offRebTitleTV" translatable="false">O REB</string>
    <string name="defRebTitleTV" translatable="false">D REB</string>
    <string name="assistTitleTV" translatable="false">AST</string>
    <string name="turnoversTitleTV" translatable="false">TOV</string>
    <string name="blockTitleTV" translatable="false">BLK</string>
    <string name="foulTitleTV" translatable="false">FOUL</string>
    <string name="startGame">Start game</string>
    <string name="tehnicalFoulTitleTV" translatable="false">TEH</string>
    <string name="stealsTitleTV" translatable="false">STL</string>
    <string name="finishGameTV">Finish game</string>
    <string name="table">Table</string>
    <string name="positionTitleTV" translatable="false">#</string>
    <string name="teamNameTitleTV" translatable="false">TEAM</string>
    <string name="totalGamesTitleTV" translatable="false">P</string>
    <string name="wGamesTitleTV" translatable="false">W</string>
    <string name="lGamesTitleTV" translatable="false">L</string>
    <string name="ptsPlusMinusTitleTV" translatable="false">+-</string>
    <string name="ptsMinusTitleTV" translatable="false">-</string>
    <string name="pointsTitleTV" translatable="false">PTS</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="team_added">Team added!</string>
    <string name="add_team_name">Add team name!</string>
    <string name="team_not_added">Team not added!</string>
    <string name="player_added">Player added!</string>
    <string name="player_not_added">Player not added!</string>
    <string name="player_has_5_foul">The player has 5 fouls!</string>
    <string name="teams_must_start_with_5_players">Teams must start with 5 players!</string>
    <string name="no" translatable="false">#</string>
    <string name="PLAYER" translatable="false">Player</string>
    <string name="Time" translatable="false">Time</string>
    <string name="FG" translatable="false">FG</string>
    <string name="pts2" translatable="false">2pts</string>
    <string name="pts3" translatable="false">3pts</string>
    <string name="FT" translatable="false">FT</string>
    <string name="OREB" translatable="false">O REB</string>
    <string name="DREB" translatable="false">D REB</string>
    <string name="REB" translatable="false">REB</string>
    <string name="AST" translatable="false">AST</string>
    <string name="BLK" translatable="false">BLK</string>
    <string name="STL" translatable="false">STL</string>
    <string name="TOV" translatable="false">TOV</string>
    <string name="PF" translatable="false">PF</string>
    <string name="PTS" translatable="false">PTS</string>
    <string name="EFF" translatable="false">EFF</string>
    <string name="taraba" translatable="false">#</string>
    <string name="total">Total:</string>
    <string name="kosa_crta" translatable="false">/</string>
    <string name="team_name_hint">Team name</string>
    <string name="player_number_hint" translatable="false">#</string>
    <string name="player_name_hint">Name</string>
    <string name="button_save">Save</string>
    <string name="button_share">Share</string>
    <string name="button_settings">Settings</string>
    <string name="dark">Dark</string>
    <string name="serbian">Serbian</string>
    <string name="light">Light</string>
    <string name="english">English</string>
    <string name="nav_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="nav_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="themes">Themes</string>
    <string name="themes_dialog_title" translatable="false">Perform Sync Using</string>
    <string name="themes_default_value">Light</string>
    <string name="themes_summary">Light</string>
    <string-array name="themes_entries">
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string-array name="themes_values">
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string name="languages">Languages</string>
    <string name="languages_dialog_title" translatable="false">Perform Sync Using</string>
    <string name="languages_default_value">English</string>
    <string name="languages_summary">English</string>
    <string-array name="languages_entries">
        <item>@string/english</item>
        <item>@string/serbian</item>
    </string-array>
    <string-array name="languages_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="choose_hall">Arena</string>
    <string name="save_game">Save Game</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="points_negative_warning">Shots can not be a negative number!</string>
    <string name="game_date">Date</string>
    <string name="game_time">Time</string>
    <string name="game_hall">Arena</string>
    <string name="team">Team</string>
    <string name="login">Login</string>
    <string name="full_name_hint_register">Full name</string>
    <string name="email_hint_register">Email</string>
    <string name="password_hint_register">Password</string>
    <string name="already_have_account">Already have an account?&#160;</string>
    <string name="dont_have_account">Don\'t have an account?&#160;</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="togline" translatable="false">Togline...</string>
    <string name="games">Games</string>
    <string name="teams_nav">Teams</string>
    <string name="standings">Standings</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="todays_roster">Today\'s \nroster</string>
    <string name="starting5">Starting \nfive</string>
    <string name="player_stats">Player stats</string>
    <string-array name="parametres_array">
        <item>PTS</item>
        <item>EFF</item>
        <item>AST</item>
        <item>REB</item>
        <item>STL</item>
        <item>BLK</item>
        <item>TOV</item>
        <item>PF</item>
        <item>TEH</item>
    </string-array>
    <string name="made">Made</string>
    <string name="attempt">Attempt</string>
    <string name="offensive">Offensive</string>
    <string name="defensive">Defensive</string>
    <string name="points2">2 points</string>
    <string name="points3">3 points</string>
    <string name="points1">Free throws</string>
    <string name="rebounds">Rebounds</string>
    <string name="assists">Assists</string>
    <string name="blocks">Blocks</string>
    <string name="steals">Steals</string>
    <string name="turnovers">Turnovers</string>
    <string name="fouls">Fouls</string>
    <string name="technical_fouls">Technical fouls</string>
    <string name="save_league">Save league</string>
    <string name="league_added">League added!</string>
    <string name="league_name_fail">Add league name!</string>
    <string name="league_not_added">League not added!</string>
    <string name="create_league">Create new league</string>
    <string name="league_name_hint">League name</string>
    <string name="recent_games">Recent games</string>
    <string name="upcoming">Upcoming</string>
    <string name="toolbar_create_league">Create league</string>
    <string name="toolbar_create_team">Create team</string>
    <string name="toolbar_create_match">Create game</string>
    <string name="toolbar_choose_lineup">Choose lineup</string>
    <string name="game_stats">Game stats</string>
    <string name="leagues_title">Leagues</string>
    <string name="is_in_the_bonus">is in the bonus!</string>
    <string name="quarter_one" translatable="false">Q1</string>
    <string name="quarter_two" translatable="false">Q2</string>
    <string name="quarter_three" translatable="false">Q3</string>
    <string name="quarter_four" translatable="false">Q4</string>
    <string name="extra_time" translatable="false">ET</string>
    <string name="home_team">Home team</string>
    <string name="away_team">Away team</string>
    <string name="exhibition">Exhibition</string>
    <string name="duga" translatable="false">Duga</string>
    <string name="lukovski" translatable="false">Lukovski</string>
    <string name="arena">Arena</string>
    <string name="arena_name_hint">Arena name</string>
    <string name="arena_added">Arena added!</string>
    <string name="arena_name_fail">Add arena name!</string>
    <string name="arena_not_added">Arena not added!</string>
    <string name="some_fields">Some fields are not selected? Please select all fields.</string>
    <string name="finish_game_dialog_text">Are you sure you want to finish the game?</string>
    <string name="dialog_title">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
</resources>