<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="8dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/lzr"
        android:width="130dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/blue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lzr"
         />



    <Button
        android:id="@+id/create_game"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_game"
        android:onClick="createGame"/>

    <Button
        android:id="@+id/teams"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/teams"/>

    <Button
        android:id="@+id/create_team"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_team"
        android:onClick="createTeam"/>

    <Button
        android:id="@+id/quit"
        android:width="130dp"
        android:background="@color/blue_btn"
        android:textColor="@color/text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/quit"/>

</LinearLayout>
</ScrollView>