<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeamsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_standings"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/header_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/choose_league"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginRight="30dp"/>

        <Spinner
            android:id="@+id/choose_league"
            android:layout_width="175dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/spinner_custom"
            android:elevation="3dp"
            android:entries="@array/leagues" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/positionTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/text"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/teamNameTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text=""
            android:textColor="@color/text"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/totalGamesTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalGamesTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/wGamesTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wGamesTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/lGamesTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lGamesTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/ptsPlusMinusTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ptsPlusMinusTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:gravity="center"/>

       <!-- <TextView
            android:id="@+id/ptsMinusTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ptsMinusTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/pointsTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pointsTitleTV"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/standingsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingHorizontal="16dp"/>

    <!--<Button
        android:id="@+id/createPdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createPdf"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/sharePdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share" />-->


</LinearLayout>