<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Splash2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="146dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_aliga_splash"/>

        <TextView
            android:id="@+id/togline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/togline"
            android:gravity="center_horizontal"
            android:textColor="@color/text_grey_dark"
            android:textSize="20sp"
            android:layout_marginTop="29dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="105dp">

    <Button
        android:id="@+id/go_to_sign_up_btn"
        style="@style/AppTheme.ButtonOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/sign_up" />

        <Button
            android:id="@+id/go_to_login_btn"
            style="@style/AppTheme.ButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            />

    </LinearLayout>



</LinearLayout>