<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="102dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo_register_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_register_background"
            android:hint="@string/email_hint_register"
            android:textColorHint="@color/text_grey_dark"
            android:inputType="textEmailAddress"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_register_background"
            android:hint="@string/password_hint_register"
            android:textColorHint="@color/text_grey_dark"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            />

        <Button
            android:id="@+id/log_in_btn"
            style="@style/AppTheme.ButtonOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/log_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="219dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_go_to_sign_up"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"/>
    </LinearLayout>


</LinearLayout>